K1J-1139: Map structured address to HealthCareUnitMember